fix: habilitando modulo de livros